# VRC-MPV

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  mpv.rs  vrchat.rs
